fix(gtk): fix alignment issues with nautilus sidebar

--- a/gtk-4.0/gtk-dark.css
+++ b/gtk-4.0/gtk-dark.css
@@ -4174,24 +4174,17 @@ placessidebar {
     padding: 1px 11px; }
     placessidebar row.sidebar-row {
       margin: 0;
-      border-radius: 0; }
+      border-radius: 0;
+      color: #d8dee9; }
       placessidebar row.sidebar-row label {
         color: #d8dee9;
-        padding-left: 8px; }
-      placessidebar row.sidebar-row.sidebar-row .sidebar-icon {
-        margin-left: -14px;
-        margin-right: 12px;
-        padding-left: 14px;
-        padding-right: 12px;
-        color: #d8dee9; }
+        padding-left: 30px; }
       placessidebar row.sidebar-row:hover {
         transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-        color: rgba(0, 0, 0, 0.76);
         background-color: transparent;
         /*rgba(65,67,75,0.4); */
         background-image: linear-gradient(to right, rgba(65, 67, 75, 0) 40px, rgba(0, 0, 0, 0.12) 40px, rgba(0, 0, 0, 0.12) 97%); }
       placessidebar row.sidebar-row:active:hover {
-        color: rgba(0, 0, 0, 0.76);
         background-color: rgba(0, 0, 0, 0.23); }
       placessidebar row.sidebar-row:selected {
         color: #fff;
