--- a/gtk-4.0/widgets/_sidebar.scss
+++ b/gtk-4.0/widgets/_sidebar.scss
@@ -131,29 +131,20 @@ placessidebar {
 			&.sidebar-row {
         label { 
           color: $headerbar_fg_color; 
-          padding-left: 8px;
+          padding-left: 30px;
         }
         margin: 0;
         border-radius: 0;
-				&.sidebar-row{
-					.sidebar-icon {
-						margin-left:-14px;
-						margin-right: 12px;
-						padding-left: 14px;
-						padding-right: 12px;
-						color: $headerbar_fg_color;
-					}
-				}
+        color: $headerbar_fg_color;
+
 				&:hover{
 					transition: all 300ms cubic-bezier(0.25, 0.46, 0.45, 0.94);
-					color: rgba(0,0,0,0.76);
 					background-color: transparent; /*rgba(65,67,75,0.4); */
 					background-image:linear-gradient(to right, rgba(65,67,75,0) 40px, rgba(0,0,0,0.12) 40px,rgba(0,0,0,0.12) 97%);
 				}
 
 				&:active{
 					&:hover{
-						color: rgba(0,0,0,0.76);
 						background-color: rgba(0,0,0,0.23);
 					}
 				}
